RESOLVED FIXED62381
[Qt] [WK2] Many editing tests failed on missing shouldBeginEditingInDOMRange:range printout
https://bugs.webkit.org/show_bug.cgi?id=62381
Summary [Qt] [WK2] Many editing tests failed on missing shouldBeginEditingInDOMRange:...
Chang Shu
Reported 2011-06-09 09:13:01 PDT
The test results are missing shouldBeginEditingInDOMRange:range etc. For example: editing/inserting/4278698.html editing/inserting/editable-html-element.html editing/inserting/editing-empty-divs.html editing/inserting/insert-div-023.html editing/inserting/multiple-lines-selected.html
Attachments
fix patch (5.23 KB, patch)
2011-06-09 10:18 PDT, Chang Shu
no flags
Patch (11.64 KB, patch)
2011-06-09 12:21 PDT, James Robinson
no flags
Chang Shu
Comment 1 2011-06-09 10:18:27 PDT
Created attachment 96601 [details] fix patch
Andreas Kling
Comment 2 2011-06-09 10:59:51 PDT
Comment on attachment 96601 [details] fix patch This feels a bit hackish, but no other solutions come to mind. So r+
WebKit Review Bot
Comment 3 2011-06-09 11:09:42 PDT
Comment on attachment 96601 [details] fix patch Clearing flags on attachment: 96601 Committed r88461: <http://trac.webkit.org/changeset/88461>
WebKit Review Bot
Comment 4 2011-06-09 11:09:46 PDT
All reviewed patches have been landed. Closing bug.
James Robinson
Comment 5 2011-06-09 12:21:29 PDT
James Robinson
Comment 6 2011-06-09 12:23:42 PDT
Gah, this uploaded to the wrong bug. So sorry!
Chang Shu
Comment 7 2011-06-09 12:24:36 PDT
(In reply to comment #6) > Gah, this uploaded to the wrong bug. So sorry! haha
Note You need to log in before you can comment on or make changes to this bug.