2011-06-09  Chang Shu  <cshu@webkit.org>

Reviewed by Andreas Kling.

        [Qt] [WK2] Many editing tests failed on missing shouldBeginEditingInDOMRange:range printout
        https://bugs.webkit.org/show_bug.cgi?id=62381

        Unskip passed tests.

        * platform/qt-wk2/Skipped:
2011-06-09  Chang Shu  <cshu@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] [WK2] Many editing tests failed on missing shouldBeginEditingInDOMRange:range printout
        https://bugs.webkit.org/show_bug.cgi?id=62381

        Activate QGraphicsScene and setFocus on QGraphicsItem to make sure the view has the focus.
        QWKPagePrivate::isViewFocused() will check it later.

        * WebKitTestRunner/qt/PlatformWebViewQt.cpp:
        (WTR::PlatformWebView::PlatformWebView):

git-svn-id: svn://svn.chromium.org/blink/trunk@88461 bbb929c8-8fbe-4397-9dbb-9b2b20218538